Replace deprecated boxed constructors